Sun Jun 23 20:42:35 UTC 2024
a/grub-2.12-x86_64-4.txz:  Rebuilt.
  Leave os-prober disabled by default, but add an example to /etc/default/grub
  to make it easy to enable it. Thanks to gmgf.
+--------------------------+
Sun Jun 23 18:58:33 UTC 2024
a/grub-2.12-x86_64-3.txz:  Rebuilt.
  A few more changes, and moved out of /testing.
  Disable stack protector so that legacy BIOS works.
  Add a hint about .cfg suffix requirement in /etc/default/grub.d/.
  Add Richard Cranium's 09_slackware_linux. Thanks to Daedra for POSIX fixes.
l/python-hatchling-1.25.0-x86_64-1.txz:  Upgraded.
l/python-importlib_metadata-7.2.1-x86_64-1.txz:  Upgraded.
EFI/BOOT/bootx64.efi:  Rebuilt.
isolinux/efiboot.img:  Rebuilt.
+--------------------------+
Sat Jun 22 20:05:28 UTC 2024
Today's episode of emacs versus vi:
ap/vim-9.1.0514-x86_64-1.txz:  Upgraded.
e/emacs-29.4-x86_64-1.txz:  Upgraded.
  Emacs 29.4 is an emergency bugfix release intended to fix a
  security vulnerability:
  Arbitrary shell commands are no longer run when turning on Org mode.
  This is for security reasons, to avoid running malicious commands.
  (* Security fix *)
xap/vim-gvim-9.1.0514-x86_64-1.txz:  Upgraded.
extra/emacs-regular-build/emacs-29.4-x86_64-1_regular.txz:  Upgraded.
  (* Security fix *)
+--------------------------+
Sat Jun 22 18:18:41 UTC 2024
l/PyQt-builder-1.16.3-x86_64-1.txz:  Upgraded.
l/sip-6.8.5-x86_64-1.txz:  Upgraded.
n/libksba-1.6.7-x86_64-1.txz:  Upgraded.
+--------------------------+
Fri Jun 21 18:54:11 UTC 2024
a/dialog-1.3_20240619-x86_64-1.txz:  Upgraded.
a/kernel-firmware-20240620_77eb1a9-noarch-1.txz:  Upgraded.
a/kernel-generic-6.9.6-x86_64-1.txz:  Upgraded.
a/kernel-huge-6.9.6-x86_64-1.txz:  Upgraded.
a/kernel-modules-6.9.6-x86_64-1.txz:  Upgraded.
d/kernel-headers-6.9.6-x86-1.txz:  Upgraded.
d/python-pip-24.1-x86_64-1.txz:  Upgraded.
k/kernel-source-6.9.6-noarch-1.txz:  Upgraded.
l/libclc-18.1.8-x86_64-2.txz:  Rebuilt.
  Install the correct slack-desc. Thanks to audriusk.