@@ -11,9 +11,21 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Sun, 23 Jun 2024 20:42:35 GMT</pubDate>
-      <lastBuildDate>Sun, 23 Jun 2024 20:57:56 GMT</lastBuildDate>
+      <pubDate>Sun, 23 Jun 2024 22:54:10 GMT</pubDate>
+      <lastBuildDate>Sun, 23 Jun 2024 23:28:09 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Sun, 23 Jun 2024 22:54:10 GMT</title>
+         <pubDate>Sun, 23 Jun 2024 22:54:10 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20240623225410</link>
+         <guid isPermaLink="false">20240623225410</guid>
+         <description>
+           <![CDATA[<pre>
+a/grub-2.12-x86_64-5.txz:  Rebuilt.
+  Preserve permissions on scripts in /etc/grub.d/. Thanks to LuckyCyborg.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Sun, 23 Jun 2024 20:42:35 GMT</title>
          <pubDate>Sun, 23 Jun 2024 20:42:35 GMT</pubDate>
