@@ -1,20 +1,20 @@
-Sun Jun 23 20:46:12 UTC 2024
+Sun Jun 23 22:57:47 UTC 2024
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2024-06-23 20:42 .
+drwxr-xr-x 12 root root      4096 2024-06-23 22:54 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1153054 2024-06-23 19:02 ./CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-06-23 19:02 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1153054 2024-06-23 20:46 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-06-23 20:46 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root   1105419 2024-06-23 20:42 ./ChangeLog.txt
+-rw-r--r--  1 root root   1105587 2024-06-23 22:54 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2024-06-23 18:50 ./EFI/BOOT
 -rw-r--r--  1 root root   1200128 2024-06-23 18:50 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2024-06-23 18:50 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1509284 2024-06-23 19:02 ./FILELIST.TXT
+-rw-r--r--  1 root root   1509284 2024-06-23 20:46 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    912447 2024-06-23 20:45 ./PACKAGES.TXT
+-rw-r--r--  1 root root    912447 2024-06-23 22:57 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3623 2024-06-21 18:40 ./README.initrd
 -rw-r--r--  1 root root     34114 2023-12-11 20:35 ./README_CRYPT.TXT
@@ -662,13 +662,13 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2024-06-23 20:45 ./slackware64
--rw-r--r--  1 root root    355833 2024-06-23 20:45 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-06-23 20:45 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    440674 2024-06-23 20:44 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4693377 2024-06-23 20:45 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2024-06-23 22:57 ./slackware64
+-rw-r--r--  1 root root    355833 2024-06-23 22:57 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-06-23 22:57 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    440674 2024-06-23 22:56 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4698685 2024-06-23 22:56 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2024-06-23 20:44 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2024-06-23 22:56 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
@@ -795,9 +795,9 @@ drwxr-xr-x  2 root root     32768 2024-06-23 20:44 ./slackware64/a
 -rw-r--r--  1 root root       291 2023-05-14 00:12 ./slackware64/a/grep-3.11-x86_64-1.txt
 -rw-r--r--  1 root root    271096 2023-05-14 00:12 ./slackware64/a/grep-3.11-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-05-14 00:12 ./slackware64/a/grep-3.11-x86_64-1.txz.asc
--rw-r--r--  1 root root       269 2024-06-23 20:40 ./slackware64/a/grub-2.12-x86_64-4.txt
--rw-r--r--  1 root root  10451412 2024-06-23 20:40 ./slackware64/a/grub-2.12-x86_64-4.txz
--rw-r--r--  1 root root       195 2024-06-23 20:40 ./slackware64/a/grub-2.12-x86_64-4.txz.asc
+-rw-r--r--  1 root root       269 2024-06-23 22:45 ./slackware64/a/grub-2.12-x86_64-5.txt
+-rw-r--r--  1 root root  10455068 2024-06-23 22:45 ./slackware64/a/grub-2.12-x86_64-5.txz
+-rw-r--r--  1 root root       195 2024-06-23 22:45 ./slackware64/a/grub-2.12-x86_64-5.txz.asc
 -rw-r--r--  1 root root       314 2023-08-20 19:07 ./slackware64/a/gzip-1.13-x86_64-1.txt
 -rw-r--r--  1 root root    117772 2023-08-20 19:07 ./slackware64/a/gzip-1.13-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-08-20 19:07 ./slackware64/a/gzip-1.13-x86_64-1.txz.asc
@@ -5786,11 +5786,11 @@ drwxr-xr-x   2 root root      4096 2024-05-05 18:37 ./slackware64/y
 -rw-r--r--   1 root root   1488844 2024-05-05 17:22 ./slackware64/y/nethack-3.6.7-x86_64-2.txz
 -rw-r--r--   1 root root       195 2024-05-05 17:22 ./slackware64/y/nethack-3.6.7-x86_64-2.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2024-06-23 20:46 ./source
--rw-r--r--   1 root root    621418 2024-06-23 20:46 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       195 2024-06-23 20:46 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    866481 2024-06-23 20:45 ./source/FILE_LIST
--rw-r--r--   1 root root  29705346 2024-06-23 20:45 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2024-06-23 22:57 ./source
+-rw-r--r--   1 root root    621415 2024-06-23 22:57 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       195 2024-06-23 22:57 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    866478 2024-06-23 22:57 ./source/FILE_LIST
+-rw-r--r--   1 root root  29718187 2024-06-23 22:57 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 124 root root      4096 2024-06-23 18:42 ./source/a
 -rw-r--r--   1 root root       339 2023-09-28 19:06 ./source/a/FTBFSlog
@@ -6204,18 +6204,18 @@ drwxr-xr-x   2 root root      4096 2022-09-07 16:29 ./source/a/grep/scripts
 -rw-r--r--   1 root root       104 2022-09-07 16:29 ./source/a/grep/scripts/egrep
 -rw-r--r--   1 root root       104 2022-09-07 16:29 ./source/a/grep/scripts/fgrep
 -rw-r--r--   1 root root       743 2018-02-27 06:13 ./source/a/grep/slack-desc
-drwxr-xr-x   2 root root      4096 2024-06-23 18:43 ./source/a/grub
+drwxr-xr-x   2 root root      4096 2024-06-23 22:40 ./source/a/grub
 -rw-r--r--   1 root root      1167 2023-12-21 19:26 ./source/a/grub/0001-00_header-add-GRUB_COLOR_-variables.patch
 -rw-r--r--   1 root root       444 2024-01-02 19:45 ./source/a/grub/0001-skip-new-and-orig-files-in-etc-grub.d.patch
 -rw-r--r--   1 root root       766 2023-12-21 19:30 ./source/a/grub/0003-support-dropins-for-default-configuration.patch
 -rw-r--r--   1 root root      1103 2018-05-16 15:18 ./source/a/grub/0198-align-struct-efi_variable-better.patch
 -rw-r--r--   1 root root      5719 2024-03-31 20:37 ./source/a/grub/09_slackware_linux
 -rw-r--r--   1 root root      1320 2023-12-21 07:17 ./source/a/grub/b835601c7639ed1890f2d3db91900a8506011a8e.patch
--rw-r--r--   1 root root       307 2021-09-10 18:36 ./source/a/grub/doinst.sh.gz
+-rw-r--r--   1 root root       688 2024-06-23 22:41 ./source/a/grub/doinst.sh
 -rw-r--r--   1 root root      1041 2024-06-23 20:33 ./source/a/grub/etc.default.grub
 -rw-r--r--   1 root root   6675608 2023-12-20 16:53 ./source/a/grub/grub-2.12.tar.xz
 -rw-r--r--   1 root root       566 2023-12-20 16:53 ./source/a/grub/grub-2.12.tar.xz.sig
--rwxr-xr-x   1 root root      8477 2024-06-23 20:22 ./source/a/grub/grub.SlackBuild
+-rwxr-xr-x   1 root root      8473 2024-06-23 22:41 ./source/a/grub/grub.SlackBuild
 -rw-r--r--   1 root root      1458 2016-12-25 09:49 ./source/a/grub/grub.dejavusansmono.gfxterm.font.diff
 -rw-r--r--   1 root root       619 2012-09-29 04:34 ./source/a/grub/initrd_naming.patch
 -rw-r--r--   1 root root       721 2023-12-21 19:34 ./source/a/grub/slack-desc
