@@ -98,7 +98,6 @@ gzip ./source/a/dialog/dialog.smaller.min.height.diff
 gzip ./source/a/dialog/doinst.sh
 gzip ./source/a/dialog/dialog.no.aspect.ratio.autoajust.patch
 gzip ./source/a/haveged/doinst.sh
-gzip ./source/a/grub/doinst.sh
 gzip ./source/a/devs/makedev_2.3.1.hd.diff
 gzip ./source/a/devs/makedev_2.3.1-46.2.diff
 gzip ./source/a/devs/makedev.hd.diff
