@@ -11,8 +11,19 @@ config() {
   # Otherwise, we leave the .new copy for the admin to consider...
 }
 
+preserve_perms() {
+  NEW="$1"
+  OLD="$(dirname $NEW)/$(basename $NEW .new)"
+  if [ -e $OLD ]; then
+    cp -a $OLD ${NEW}.incoming
+    cat $NEW > ${NEW}.incoming
+    mv ${NEW}.incoming $NEW
+  fi
+  config $NEW
+}
+
 # Process config files in etc/grub.d/:
 for file in etc/grub.d/*.new ; do
-  config $file
+  preserve_perms $file
 done
 config etc/default/grub.new
