@@ -1,3 +1,7 @@
+Sun Jun 23 22:54:10 UTC 2024
+a/grub-2.12-x86_64-5.txz:  Rebuilt.
+  Preserve permissions on scripts in /etc/grub.d/. Thanks to LuckyCyborg.
++--------------------------+
 Sun Jun 23 20:42:35 UTC 2024
 a/grub-2.12-x86_64-4.txz:  Rebuilt.
   Leave os-prober disabled by default, but add an example to /etc/default/grub
